--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             height: 400px;
             position: relative;
             background-color: #f5f5f5;
-            border: solid 1px #ccc;
+            outline: solid 1px #ccc;
         }
         #graph > canvas {
             position: absolute;
@@ -33,10 +33,11 @@
             opacity: 1;
         }
         fieldset {
-            margin: 0.5ex 0;
+            margin: 1ex 0;
             padding: 0;
             background-color: #f5f5f5;
-            border: solid 1px #ccc;
+            border: none;
+            outline: solid 1px #ccc;
         }
         label {
             display: inline-block;
