--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
         <canvas class="axes" width="800" height="400"></canvas>
         <canvas class="fg"  width="800" height="400"></canvas>
         <canvas class="c dark highlightable"  width="800" height="400" data-bind="css: {highlight: c.highlight}"></canvas>
+        <canvas class="dprime dark highlightable"  width="800" height="400" data-bind="css: {highlight: d_prime.highlight}"></canvas>
     </div>
     <form id="params">
         <fieldset class="probabilities">
