--- a/index.html
+++ b/index.html
@@ -121,5 +121,8 @@
             </label>
         </fieldset>
     </form>
+    <div id='meta'>
+        <a href="https://github.com/danieldickison/sdt-visualization" target="_blank">Source code</a>
+    </div>
 </body>
 </html>
